--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -1,4 +1,4 @@
-name: Deploy to Staging (base64 + pip install)
+name: Deploy to Staging (full CI with backup, env, logging)
 
 on:
   push:
@@ -39,16 +39,42 @@ jobs:
         run: |
           scp app.tar.gz fastapiuser@144.91.124.233:/tmp/app.tar.gz
 
-      - name: Deploy and restart service
+      - name: Deploy, log, and restart service
         run: |
           ssh fastapiuser@144.91.124.233 << 'EOF'
             set -e
             cd /opt/apps/evlink-staging/
+
+            # 💾 Rensa äldre backups (behåll senaste 5)
+            mkdir -p ~/deploy-backups/
+            ls -1t ~/deploy-backups/evlink-staging-*.tar.gz 2>/dev/null | tail -n +6 | xargs -r rm --
+
+            # 💾 Skapa ny backup
+            TIMESTAMP=\$(date +%Y%m%d-%H%M)
+            tar czf ~/deploy-backups/evlink-staging-\$TIMESTAMP.tar.gz .
+
+            # 🔄 Rensa gammal kod
             rm -rf *
+
+            # 📦 Packa upp ny kod
             tar xzf /tmp/app.tar.gz -C /opt/apps/evlink-staging/
+
+            # 🌱 Ladda staging.env om det finns
+            if [ -f ~/staging.env ]; then
+              cp ~/staging.env /opt/apps/evlink-staging/.env
+            fi
+
+            # 🐍 Återskapa venv + installera dependencies
             python3 -m venv venv
             source venv/bin/activate
             pip install --upgrade pip
             pip install -r requirements.txt
+
+            # 📝 Logga deploy + begränsa till 150 rader
+            echo "\$(date) - Deployed commit: $GITHUB_SHA" >> /opt/apps/evlink-staging/deploy.log
+            tail -n 150 /opt/apps/evlink-staging/deploy.log > /opt/apps/evlink-staging/deploy.log.tmp
+            mv /opt/apps/evlink-staging/deploy.log.tmp /opt/apps/evlink-staging/deploy.log
+
+            # 🔁 Starta om tjänsten
             sudo /bin/systemctl restart evlink-staging
           EOF
