feat(auth): add login endpoint and connect Next.js login form to backend
- Implemented /api/login in FastAPI using a mock credential check
- Added Pydantic schemas for LoginRequest and TokenResponse
- Connected frontend login page (/login) to backend via fetch()
- Implemented loading and error handling in Next.js login form
- Enabled CORS to allow API calls from http://localhost:3000
- Adjusted FastAPI import structure and uvicorn launch config
- Verified end-to-end login flow using mock credentials

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -6,6 +6,7 @@ UVICORN=$(VENV)/bin/uvicorn
 
 # Default
 run:
+    python3 -m venv $(VENV)
 	$(UVICORN) $(APP):app --reload
 
 # Run tests
@@ -34,4 +35,5 @@ venv:
 
 # Install requirements
 install:
+	$(VENV)/bin/pip install --upgrade pip
 	$(VENV)/bin/pip install -r requirements.txt
