999 nextjs frontend experiment (#28)
* Set up Next.js frontend with App Router, Tailwind, and src/ structure

* Remove node_modules from tracking and add to .gitignore

* feat(auth): add login endpoint and connect Next.js login form to backend

- Implemented /api/login in FastAPI using a mock credential check
- Added Pydantic schemas for LoginRequest and TokenResponse
- Connected frontend login page (/login) to backend via fetch()
- Implemented loading and error handling in Next.js login form
- Enabled CORS to allow API calls from http://localhost:3000
- Adjusted FastAPI import structure and uvicorn launch config
- Verified end-to-end login flow using mock credentials

* Implement full JWT authentication and backend protection

- Replaced mock /api/login with real login logic
  - Lookup user by email from database
  - Verify password using bcrypt
  - Generate and return real JWT access token

- Updated backend with:
  - Security.py: create_access_token, decode_token, get_current_user
  - Protected backend endpoints using JWT in Authorization headers
  - Proper error handling for invalid or missing tokens

- Improved frontend with:
  - Corrected NextAuth session to include accessToken
  - Fixed Typescript types by extending Session and JWT interfaces
  - Built a test page (/test-token) to validate protected API calls using session accessToken
  - Fully functional registration flow with auto-login after register

- General improvements:
  - Cleaner API error handling (JSON structured errors)
  - More scalable authentication design (ready for future refresh-tokens, roles, etc.)

Next step: Implement full logout flow.

* feat(profile): Add email editing with protected API, update flow and forced re-login

- Implemented backend endpoint POST /api/users/{user_id}/email to update user email
- Secured private API routes with JWT verification (security.py)
- Created private.py router to handle protected user actions
- Updated ProfilePage to support inline editing of email vi

--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -1,4 +1,4 @@
-name: Deploy to Staging (with backup, env, log, SHA-fix)
+name: Deploy to Staging (Next.js frontend + FastAPI backend)
 
 on:
   push:
@@ -37,11 +37,11 @@ jobs:
 
       - name: Upload to server
         run: |
-          scp app.tar.gz fastapiuser@144.91.124.233:/tmp/app.tar.gz
+          scp app.tar.gz roger@144.91.124.233:/tmp/app.tar.gz
 
-      - name: Deploy, log, and restart service
+      - name: Deploy, log, build frontend and restart services
         run: |
-          ssh fastapiuser@144.91.124.233 "DEPLOY_SHA=${GITHUB_SHA} bash -s" << 'EOF'
+          ssh roger@144.91.124.233 "DEPLOY_SHA=${GITHUB_SHA} bash -s" << 'EOF'
             set -e
             cd /opt/apps/evlink-staging/
 
@@ -61,20 +61,27 @@ jobs:
 
             # 🌱 staging.env → .env
             if [ -f ~/staging.env ]; then
-              cp ~/staging.env /opt/apps/evlink-staging/.env
+              cp ~/staging.env /opt/apps/evlink-staging/backend/.env
             fi
 
-            # 🐍 venv och dependencies
+            # 🐍 Backend: skapa venv och installera Python-dependencies
+            cd /opt/apps/evlink-staging/backend
             python3 -m venv venv
             source venv/bin/activate
             pip install --upgrade pip
             pip install -r requirements.txt
+
+            # 🌐 Frontend: installera och bygg Next.js
+            cd /opt/apps/evlink-staging/frontend
+            npm install
+            npm run build
 
             # 📝 Logga deploy + begränsa till 150 rader
             echo "$(date) - Deployed commit: $DEPLOY_SHA" >> /opt/apps/evlink-staging/deploy.log
             tail -n 150 /opt/apps/evlink-staging/deploy.log > /opt/apps/evlink-staging/deploy.log.tmp
             mv /opt/apps/evlink-staging/deploy.log.tmp /opt/apps/evlink-staging/deploy.log
 
-            # 🔁 Starta om systemd-tjänst
-            sudo /bin/systemctl restart evlink-staging
+            # 🔁 Starta om systemd-tjänster
+            sudo systemctl restart evlink-staging
+            sudo systemctl restart evlink-staging-frontend
           EOF
