--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,62 @@
-# ------------------------------------
-# Node.js / Frontend
-# ------------------------------------
-**/node_modules/
-**/.next/
-**/dist/
-**/.turbo/
-**/build/
-**/out/
-**/.env.local
-**/.env.production
-**/.env.development
-**/.vercel/
+# ------------------------------
+# Python
+# ------------------------------
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.pyc
+*.env
+env/
+venv/
+.venv/
 
-# ------------------------------------
-# Python / Backend
-# ------------------------------------
-**/__pycache__/
-**/*.py[cod]
-**/*.pyo
-**/*.pyd
-**/*.pyc
-**/.env
-**/.venv/
-**/*.log
-
-# SQLite
+# SQLite databases
 *.db
-data/
+*.sqlite3
 
-# ------------------------------------
-# Editors / OS
-# ------------------------------------
-.idea/
-.vscode/
+# ------------------------------
+# Node.js (Next.js / Frontend)
+# ------------------------------
+node_modules/
+.next/
+out/
+dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# ------------------------------
+# OS / Editor files
+# ------------------------------
 .DS_Store
 Thumbs.db
+.idea/
+.vscode/
 
-# ------------------------------------
-# Testing / Coverage
-# ------------------------------------
-.coverage
-htmlcov/
+# ------------------------------
+# FastAPI / Uvicorn artifacts
+# ------------------------------
 *.pid
 *.sock
+
+# ------------------------------
+# Logs / Coverage
+# ------------------------------
+*.log
+logs/
+htmlcov/
+.coverage
+coverage.xml
+
+# ------------------------------
+# Environment / Secrets
+# ------------------------------
+.env
+.env.local
+.env.development
+.env.production
+.env.staging
+.env.test
+.env.example
