Feature/dashboard webhook 0.0.1 (#41)
* feat(api,cache): improve vehicle caching logic and frontend vehicle rendering

- Updated backend logic to cache each vehicle individually in SQLite
- Added timedelta import to fix cache expiration check
- Fixed SQL insert error (mismatched number of columns)
- Improved cache validation based on `updated_at` timestamp
- Refactored frontend vehicle types to match Enode structure
- Updated VehicleTable to render displayName, battery level, and charging status
- Added error handling with toast for vehicle fetch failures

* feat(auth): implement secure refresh token flow using HttpOnly cookies

- Updated /login endpoint to set refresh_token as HttpOnly cookie
  - Controlled via SECURE_COOKIES env var for staging/production compatibility
- Modified /refresh-token to read refresh_token from cookies instead of header
- Updated frontend (apiFetchSafe) to auto-refresh access_token on 401
  - New function tryRefreshToken() added
  - Uses credentials: "include" to send cookie
- Removed need for hardcoded secure=True/False in code
- Confirmed working via curl and fetch-based tests

This completes secure JWT authentication and automatic refresh for EVLink.

* Enhance webhook log handling with filtering, metadata, and UI improvements

- Updated `webhook_log` table with `user_id`, `vehicle_id`, and `event` columns
- Added migration script to backfill metadata from existing payloads
- Improved `save_webhook_event()` to extract and store metadata automatically
- Added backend support for filtering logs by event and limiting result count
- Implemented `ENODE_EVENT_LABELS` in frontend for human-readable labels
- Created dropdown filter for event types using shadcn/ui components
- Added persistent event filter with localStorage support
- Added limit selector (10/25/50/100) with live updates
- Adjusted `WebhookLogPage` to reflect total logs and reactive filtering

* Migrate backend to Supabase: local dev instance, schema sync, and project linking (

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,18 @@ coverage.xml
 .env.staging
 .env.test
 .env.example
+
+# Supabase local dev artifacts
+supabase/**/.temp/
+supabase/**/.branches/
+supabase/**/.supabase/
+supabase/**/.snapshots/
+supabase/**/.log/
+
+# Ignore environment-specific files
+supabase/config.*.toml
+supabase/Makefile
+
+# Secrets
+passwords.md
+supabase/staging/config.toml
