--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -32,6 +32,7 @@ python-jose==3.4.0
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
+supabase==2.15.1
 sqlite-fts4==1.0.3
 sqlite-utils==3.36
 starlette==0.36.3
