--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postbuild": "next-sitemap"
+    "generate-sitemap": "next-sitemap"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.11",
