Chore: remove next.config.mjs from production build and ignore in Git

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ scripts/evlink-api-thunder-collection.json
 scripts/api_endpoint_report.json
 scripts/api_endpoint_report.csv
 thunder_collection.json
+frontend/next.config.mjs
