--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,5 @@ scripts/api_endpoint_report.json
 scripts/api_endpoint_report.csv
 thunder_collection.json
 frontend/next.config.mjs
+supabase/scripts/sync_staging_with_local.sh
+supabase/scripts/sync_staging_schema.sh
