--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ anyio==4.9.0
 attrs==25.3.0
 bcrypt==4.3.0
 black==24.4.0
+brevo_python==1.1.2
 certifi==2025.1.31
 click==8.1.8
 click-default-group==1.2.4
