--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,15 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.18
+aiohttp-retry==2.9.1
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
 attrs==25.3.0
 bcrypt==4.3.0
 black==24.4.0
-brevo_python==1.1.2
+brevo-python==1.1.2
 certifi==2025.1.31
+charset-normalizer==3.4.2
 click==8.1.8
 click-default-group==1.2.4
 deprecation==2.1.0
@@ -54,7 +56,9 @@ python-jose==3.4.0
 python-multipart==0.0.20
 PyYAML==6.0.2
 realtime==2.4.3
+requests==2.32.3
 rsa==4.9.1
+sentry-sdk==2.29.1
 six==1.17.0
 sniffio==1.3.1
 sqlite-fts4==1.0.3
@@ -65,9 +69,11 @@ StrEnum==0.4.15
 supabase==2.15.1
 supafunc==0.9.4
 tabulate==0.9.0
+twilio==9.6.1
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 ujson==5.10.0
+urllib3==2.4.0
 uvicorn==0.29.0
 uvloop==0.21.0
 watchfiles==1.0.5
