--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,7 @@ sqlite-utils==3.36
 starlette==0.36.3
 storage3==0.11.3
 StrEnum==0.4.15
+stripe==12.2.0
 supabase==2.15.1
 supafunc==0.9.4
 tabulate==0.9.0
