feat(onboarding): nightly job to assign users to onboarding segments
- Created cron script `onboarding_check.py` to run nightly checks
- Users are added to Brevo onboarding segments based on current status:
  1. Vehicle not linked → `missing_vehicle`
  2. No API key created → `missing_api_key`
  3. No HA integration used → `missing_ha_integration`
  4. Legacy API no longer used → `using_legacy_api`
- Added Brevo service method to update contact attributes
- Verified Brevo segment assignment via curl
- Added shell script `run_onboarding_check.sh` for manual test

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,5 @@ supabase/scripts/sync_staging_with_local.sh
 supabase/scripts/sync_staging_schema.sh
 create-backlog-issues.sh
 start-backend.sh
+run_onboarding_check.sh
+supabase/config.toml
