--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -56,6 +56,7 @@ python-jose==3.4.0
 python-multipart==0.0.20
 PyYAML==6.0.2
 realtime==2.4.3
+redis==6.2.0
 requests==2.32.4
 rsa==4.9.1
 sentry-sdk==2.29.1
