refactor: Update Dockerfiles for improved context handling
- Adjusted COPY commands in both backend and frontend Dockerfiles to reflect the correct context paths, ensuring proper file inclusion during the build process.
- Removed unnecessary comments and streamlined the Dockerfile structure for clarity.

These changes enhance the build process by ensuring that the correct files are copied into the Docker images, improving maintainability and reducing potential build errors.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,8 @@
 # 1) Deps
 FROM node:20-alpine AS deps
 WORKDIR /app
-COPY frontend/package.json frontend/package-lock.json* frontend/pnpm-lock.yaml* frontend/yarn.lock* .npmrc* ./ 2>/dev/null || true
+# ⬇️ Context är ./frontend
+COPY package.json package-lock.json* pnpm-lock.yaml* yarn.lock* .npmrc* ./ 2>/dev/null || true
 RUN \
   if [ -f package-lock.json ]; then npm ci; \
   elif [ -f pnpm-lock.yaml ]; then corepack enable && pnpm i --frozen-lockfile; \
@@ -15,7 +16,7 @@ FROM node:20-alpine AS builder
 WORKDIR /app
 ENV NEXT_TELEMETRY_DISABLED=1
 COPY --from=deps /app/node_modules ./node_modules
-COPY frontend/ ./
+COPY . .
 # Se till att next.config.mjs har:  export default { output: 'standalone' }
 RUN npm run build
 
@@ -24,11 +25,8 @@ FROM node:20-alpine AS runner
 WORKDIR /app
 ENV NODE_ENV=production \
     NEXT_TELEMETRY_DISABLED=1
-
-# node-användare finns i alpine-basen
 USER node
 
-# Standalone-output från Next
 COPY --chown=node:node --from=builder /app/.next/standalone ./
 COPY --chown=node:node --from=builder /app/public ./public
 COPY --chown=node:node --from=builder /app/.next/static ./.next/static
