refactor: Update Dockerfile for improved build clarity and efficiency
- Adjusted environment variable setup to delay NODE_ENV assignment until after the build process.
- Enhanced comments for better understanding of the dependency installation and build steps.
- Streamlined the Dockerfile structure to improve readability and maintainability.

These changes contribute to a more efficient and understandable Docker build process.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,17 +2,17 @@
 FROM node:20-bookworm-slim
 
 WORKDIR /app
-ENV NODE_ENV=production \
-    NEXT_TELEMETRY_DISABLED=1
+ENV NEXT_TELEMETRY_DISABLED=1   # lämna NODE_ENV tills efter build
 
-# 1) Installera deps med lockfil (snabbare/stabilare)
+# Installera deps (inkl. dev) via lockfil
 COPY package*.json ./
-# Tips: --no-audit/--no-fund snabbar på och ger mindre brus
 RUN npm ci --no-audit --no-fund
 
-# 2) Kopiera koden och bygg
+# Kopiera kod och bygg
 COPY . .
 RUN npm run build
 
+# Runtime
+ENV NODE_ENV=production
 EXPOSE 3000
 CMD ["npm", "run", "start"]
