refactor: Update Docker configuration for Supabase integration and remove Sentry setup
- Added environment variable arguments for Supabase configuration in the Dockerfile and docker-compose.yml.
- Removed Sentry configuration files and related instrumentation code to streamline the project.
- Cleaned up package.json by removing the Sentry dependency.

These changes enhance the build process by integrating Supabase while simplifying the project structure.jtrrrrrrrrrrr

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,15 +29,18 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        NEXT_PUBLIC_SUPABASE_URL: ${NEXT_PUBLIC_SUPABASE_URL}
+        NEXT_PUBLIC_SUPABASE_ANON_KEY: ${NEXT_PUBLIC_SUPABASE_ANON_KEY}
+        NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL}
     restart: unless-stopped
     depends_on:
       backend:
         condition: service_healthy
     environment:
-      # - NODE_ENV=production
-      # - NEXT_TELEMETRY_DISABLED=1
-      # - NEXT_PUBLIC_API_BASE_URL=https://api.evlinkha.se
-      # - TZ=Europe/Stockholm
+      NEXT_PUBLIC_SUPABASE_URL: ${NEXT_PUBLIC_SUPABASE_URL}
+      NEXT_PUBLIC_SUPABASE_ANON_KEY: ${NEXT_PUBLIC_SUPABASE_ANON_KEY}
+      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL}
     ports:
       - "3010:3000"   # <- publik host-port på noden
     healthcheck:
