--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,20 @@
 # syntax=docker/dockerfile:1
 FROM node:20-bookworm-slim
-
 WORKDIR /app
-ENV NEXT_TELEMETRY_DISABLED=1
 
-# Installera deps via lockfil (npm)
+# Publika env som behövs under build (prerender)
+ARG NEXT_PUBLIC_SUPABASE_URL
+ARG NEXT_PUBLIC_SUPABASE_ANON_KEY
+ARG NEXT_PUBLIC_API_BASE_URL
+
+ENV NEXT_TELEMETRY_DISABLED=1 \
+    NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL} \
+    NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY} \
+    NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL}
+
+# Installera och bygg (npm + lockfil)
 COPY package*.json ./
 RUN npm ci --no-audit --no-fund
-
-# Kopiera kod och bygg
 COPY . .
 RUN npm run build
 
