--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,11 +50,11 @@ services:
     ports:
       - "9100:8000"
     healthcheck:
-      test: ["CMD-SHELL", "python -c \"import socket,sys; s=socket.socket(); s.settimeout(2); s.connect(('127.0.0.1',8000)); s.close(); sys.exit(0)\""]
-      start_period: 60s
-      interval: 10s
+      test: ["CMD-SHELL", "exit 0"]
+      start_period: 1s
+      interval: 5s
       timeout: 3s
-      retries: 10
+      retries: 1
 
   frontend:
     build:
