--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,9 +49,10 @@ services:
 
     ports:
       - "9100:8000"
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8000/healthz || exit 1"]
-      start_period: 30s
-      interval: 10s
-      timeout: 5s
-      retries: 5
+    
+    #healthcheck:
+    #  test: ["CMD-SHELL", "curl -f http://localhost:8000/healthz || exit 1"]
+    #  start_period: 30s
+    #  interval: 10s
+    #  timeout: 5s
+    #  retries: 5
