refactor: Reinstate health check configuration in docker-compose.yml
- Added a comprehensive health check section back into docker-compose.yml to monitor service status effectively.
- The health check now uses Python's urllib for improved reliability, with specified parameters for start period, interval, timeout, and retries.

This update enhances the robustness of the Docker setup by ensuring the service health is actively monitored.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -50,9 +50,9 @@ services:
     ports:
       - "9100:8000"
     
-    #healthcheck:
-    #  test: ["CMD-SHELL", "curl -f http://localhost:8000/healthz || exit 1"]
-    #  start_period: 30s
-    #  interval: 10s
-    #  timeout: 5s
-    #  retries: 5
+    healthcheck:
+      test: ["CMD-SHELL", "python -c \"import sys, urllib.request; sys.exit(0) if urllib.request.urlopen('http://localhost:8000/healthz').getcode() in [200, 204] else sys.exit(1)\""]
+      start_period: 30s
+      interval: 10s
+      timeout: 5s
+      retries: 5
