feat: Add frontend service to docker-compose.yml
- Introduced a new frontend service in docker-compose.yml with build context and Dockerfile configuration.
- Configured environment variables for Supabase, NextAuth, Stripe, Umami, and Brevo to enhance application integration.
- Set dependencies on the backend service and specified port mapping for the frontend.

This update expands the Docker setup to support a complete application architecture.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -56,3 +56,27 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+  
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+      args:
+        NEXT_PUBLIC_SUPABASE_URL: ${NEXT_PUBLIC_SUPABASE_URL}
+        NEXT_PUBLIC_SUPABASE_ANON_KEY: ${NEXT_PUBLIC_SUPABASE_ANON_KEY}
+        NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL}
+    restart: unless-stopped
+    environment:
+      NEXT_PUBLIC_SUPABASE_URL: ${NEXT_PUBLIC_SUPABASE_URL}
+      NEXT_PUBLIC_SUPABASE_ANON_KEY: ${NEXT_PUBLIC_SUPABASE_ANON_KEY}
+      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL}
+      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
+      NEXTAUTH_URL: ${NEXTAUTH_URL}
+      NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY: ${NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY}
+      NEXT_PUBLIC_UMAMI_WEBSITE_ID: ${NEXT_PUBLIC_UMAMI_WEBSITE_ID}
+      NEXT_PUBLIC_BREVO_CLIENT_KEY: ${NEXT_PUBLIC_BREVO_CLIENT_KEY}
+    depends_on:
+      backend:
+        condition: service_healthy
+    ports:
+      - "3010:3000"
