feat: Enable telemetry tracking in docker-compose.yml
- Added NEXT_TELEMETRY_DISABLED environment variable to the frontend service in docker-compose.yml to control telemetry data collection.
- This update enhances the configuration flexibility for monitoring and analytics within the application.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -75,6 +75,7 @@ services:
       NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY: ${NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY}
       NEXT_PUBLIC_UMAMI_WEBSITE_ID: ${NEXT_PUBLIC_UMAMI_WEBSITE_ID}
       NEXT_PUBLIC_BREVO_CLIENT_KEY: ${NEXT_PUBLIC_BREVO_CLIENT_KEY}
+      NEXT_TELEMETRY_DISABLED: "1"
     depends_on:
       backend:
         condition: service_healthy
