feat: Add Stripe publishable key to Dockerfile
- Introduced NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY as an argument in the Dockerfile to facilitate Stripe payment processing integration.
- This addition enhances the environment configuration for the frontend application.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR /app
 ARG NEXT_PUBLIC_SUPABASE_URL
 ARG NEXT_PUBLIC_SUPABASE_ANON_KEY
 ARG NEXT_PUBLIC_API_BASE_URL
+ARG NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY
 
 # Gör dem synliga under build (Next prerendrar)
 ENV NEXT_TELEMETRY_DISABLED=1 \
